# ours

./: .gitignore  Cargo.toml  README.md  TODOS.md  Webls.service  ours.desktop  package-lock.json  package.json  run  todos.md  toworkspace.nu  webls.desktop  wl
assets/: Cargo.toml
assets/src/: lib.rs
atoms/: Cargo.toml
atoms/src/: lib.rs
backend/: Cargo.toml
backend/src/: main.rs
common/: Cargo.toml
common/src/: lib.rs
delivery/: Cargo.toml
delivery/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: client.rs  download_window.rs  home.rs  main.rs  main_window.rs  server.rs
desktop/src/client/: downloads.rs
desktop/src/main_window/: client.rs  home.rs  server.rs
frontend/: .gitignore  Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
grpc/: Cargo.toml  build.rs
grpc/proto/nav/v1/: nav.proto
grpc/src/: client.rs  error.rs  lib.rs  server.rs  top.rs
ours/: Cargo.toml  wl
ours/src/: client.rs  client_prequistes.rs  home.rs  main.rs  mode.rs  serve.rs
ours/src/client/: download.rs
partitions/: Cargo.toml
server/: Cargo.toml
server/src/: app_error.rs  assets_router.rs  cd.rs  info.rs  lib.rs  mp4.rs  paste.rs  web_local.rs
site/: Cargo.toml  README.md  Trunk.toml  index.html  package-lock.json  video.css
site/src/: files_box.rs  lib.rs  main.rs  media_player.rs  nav_bar.rs
site/src/nav_bar/: info.rs  mp4.rs  paste.rs  rm.rs  upload.rs
site_assets/: Cargo.toml
site_assets/src/: lib.rs
src/: app.rs  lib.rs  lsblk.rs  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: atoms.rs  files_box.rs  login.rs  media_player.rs  nav_bar.rs
src/app/nav_bar/: cut_copy.rs  info.rs  mp4.rs  paste.rs  rm.rs  upload.rs
style/: tailwind.css
web/: Cargo.toml
web/src/: assets_router.rs  components.rs  lib.rs  main.rs  media.rs  navbar.rs  utils.rs
web/src/components/: media.rs
webls/: Cargo.toml  README.md  Webls.service  wl
webls/src/: app.rs  lib.rs  main.rs
webls/src/app/: files_box.rs  media_player.rs  nav_bar.rs
webls/src/app/nav_bar/: info.rs  mp4.rs  paste.rs  rm.rs  upload.rs
webls_app/: Cargo.toml  wl
webls_app/src/: main.rs
