[workspace]
members = [
    "common",
    "server",
    "ours",
    "assets",
    "delivery",
    "web",
    "grpc",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
serde = "1"
serde_json = "1.0"
tokio = "1"
reqwest = "0.12"

[workspace.dependencies.delivery]
path = "./delivery"
[workspace.dependencies.grpc]
path = "./grpc"

[workspace.dependencies.web]
path = "./web"

[workspace.dependencies.assets]
path = "./assets"

[workspace.dependencies.server]
path = "./server"

[workspace.dependencies.common]
path = "./common"

[workspace.dependencies.webls]
path = "./webls"

