[package]
name = "desktop"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = {workspace = true, features = ["process"]}
iced = {git = "https://github.com/iced-rs/iced.git", features = ["tokio","qr_code","svg","sipper"] }
grpc.workspace = true
common.workspace = true
server.workspace = true
# rfd = { version = "0.15.4", features = ["tokio"] }
