[package]
name = "ours-cli"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = {workspace = true, features = ["process"]}
iced = {version= "0.14", features = ["tokio","qr_code","svg","sipper"] }
grpc.workspace = true
common.workspace = true
server.workspace = true
rfd = { version = "0.16"}
get-port = "4.0.0"
local-ip-address = "0.6.5"
