[package]
name = "grpc"
version.workspace = true
edition.workspace = true

[dependencies]
prost = "0.14"
tonic = "0.14"
tonic-prost = "0.14"
tokio = {workspace = true, features = ["macros", "rt-multi-thread","fs"]}
common.workspace = true
tokio-stream = "0.1.17"
bytes = "1"

[build-dependencies]
tonic-prost-build = "0.14.2"
