[package]
name = "ours"
version.workspace = true
edition.workspace = true

[dependencies]
get-port = "4.0.0"
tokio = {workspace = true, features = ["process"]}
iced = {version ="0.13.1", features = ["tokio","qr_code","svg"] }
local-ip-address = "0.6.3"
rfd = "0.15.3"
server.workspace = true
delivery.workspace = true
common.workspace = true
assets.workspace = true
