[package]
name = "ours"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = {workspace = true, features = ["process"]}
iced = {version ="0.13.1", features = ["tokio","qr_code","svg"] }
get-port = "4.0.0"
local-ip-address = "0.6.3"
rfd = "0.15.3"
server.workspace = true
delivery.workspace = true
common.workspace = true
assets.workspace = true
async-recursion = "1.1.1"

