[package]
name = "server"
version.workspace = true
edition.workspace = true

[dependencies]
axum= {version = "0.8",features = ["multipart"]} 
tokio= {workspace = true, features = ["fs","process"]}
serde_json.workspace = true
common.workspace = true
serde = { workspace = true, features = ["derive"]}
tower-http = { version = "0.6", features = ["fs","timeout"] }
tower = "0.5"
get-port = "4.0.0"
sysinfo  = "0.33.1"
