[package]
name = "site"
version = "0.1.0"
edition = "2021"
authors = ["mahmoud-eltahawy <gemmy9300@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version = "0.8.0-rc2", features = ["csr"] }
leptos_meta = { version = "0.8.0-rc2" }
leptos_router = { version = "0.8.0-rc2" }
console_log = "1"
log = "0.4"
console_error_panic_hook = "0.1"

common.workspace = true
leptos-use = "0.16.0-beta"
web-sys = { version = "0.3", features = ["Document", "Window","File","FileList"] }
serde_json.workspace = true
send_wrapper = "0.6.0"
serde.workspace = true
reqwest = { version = "0.12.15", features = ["json","multipart"] }
icondata = "0.5.0"
icondata_core = "0.1.0"
gloo = "0.11.0"


[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"


[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
