[package]
name = "webls"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_router = { workspace = true }
leptos_meta = { version = "0.8.0-rc2" }
leptos_axum = { version = "0.8.0-rc2", optional = true }
console_error_panic_hook = "0.1"
wasm-bindgen = "=0.2.100"
thiserror = "1"
http = "1"
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["fs","timeout"], optional = true }
tracing = { version = "0.1", optional = true }
server_fn = { version = "0.8.0-rc2", features = ["multipart","cbor"] }
leptos-use = "0.16.0-beta"
send_wrapper = "0.6.0"
sysinfo  = { version = "0.33.1", optional = true }
tokio = { workspace = true, features = ["rt-multi-thread","process"], optional = true }
serde_json = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
partitions = { workspace = true, optional = true }
web-sys = { workspace = true,features = ["File","FileList"]}
common.workspace = true
atoms.workspace = true


[features]
hydrate = ["leptos/hydrate"]
ssr = [
    "dep:tokio",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:leptos_axum",
    "dep:tracing",
    "dep:sysinfo",
    "dep:serde_json",
    "dep:partitions",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "leptos-use/ssr"
]

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "webls"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# The tailwind input file.
#
# Optional, Activates the tailwind build
tailwind-input-file = "style/tailwind.css"

# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The port to use for automatic reload monitoring
reload-port = 3001

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
